devscripts (2.18.3) UNRELEASED; urgency=medium

  [ Maximiliano Curia ]
  * dpkg-depcheck:
    + Also trace openat syscall.  MR: !11

 -- Mattia Rizzolo <mattia@debian.org>  Mon, 23 Apr 2018 00:48:40 +0200

devscripts (2.18.2) unstable; urgency=medium

  [ Daniel Kahn Gillmor ]
  * uscan:
    + Add short archive extensions (tbz, txz, tgz) in the @ARCHIVE_EXT@
      regexp.  Closes: #823624

  [ Ben Finney ]
  * suspicious-source:
    + Correct "preferred form of the work for making modifications to it".
      Closes: #859617

  [ Nish Aravamudan ]
  * dep3changelog:
    + Make parsing less strict about blank lines.
      Closes: #858287; LP: #1673292

  [ Ben Wiederhake ]
  * wrap-and-sort:
    + Add a dry-run option.  Closes: #808574

  [ Hilko Bengen ]
  * debsnap:
    + Complain about existing destdir only when it is created.
      Closes: #884177

  [ Mònica Ramírez Arceda ]
  * nmudiff:
    + Add a template argument to provide a different email from the one in the
      script.  Closes: #555863

  [ Pierre-Elliott Bécue ]
  * d/control:
    + Add myself to uploaders.
  * wrap-and-sort:
    + Tweak the way files are handled, and print the modified file list in
      also in non-dry-run-mode when verbosity is enabled.
    + Remove empty lines at the beginning of a file.
  * nmudiff:
    + Add a no-pending option to not add the pending tag if needed.
    + Add a non-dd option to ask for a sponsor in the email.
      Closes: #662794

  [ Mattia Rizzolo ]
  * mk-origtargz:
    + Deal with Hurd where `getconf ARG_MAX` returns "undefined".
  * Fix some pylint issues that are reported only by stretch's pylint.
  * d/control:
    + Bump Standards-Version to 4.1.4, no changes needed.
  * test_package_lifecycle:
    + Don't depend on /usr/share/doc being available on the build host.
  * sadt:
    + Fixup the check_depends() caching functionality.  MR: !9

  [ Adam D. Barratt ]
  * debdiff:
    + Sort shlibs files before comparing. The order of entries is not