@@ -213,15 +213,20 @@ sub archive_ref_or_just_print {
         my @cmd_mapped = map { shell_quote($_) } @$cmd;
         print "@cmd_mapped\n";
     } else {
+        my ($info_attributes) =
+          $git->rev_parse(qw|--git-path info/attributes|);
+        my ($deborig_attributes) =
+          $git->rev_parse(qw|--git-path info/attributes-deborig|);
+
         # For compatibility with dgit, we have to override any
         # export-subst and export-ignore git attributes that might be set
-        rename ".git/info/attributes", ".git/info/attributes-deborig"
-          if ( -e ".git/info/attributes" );
+        rename $info_attributes, $deborig_attributes
+          if ( -e $info_attributes );
         my $attributes_fh;
-        unless ( open( $attributes_fh, '>', ".git/info/attributes" ) ) {
-            rename ".git/info/attributes-deborig", ".git/info/attributes"
-              if ( -e ".git/info/attributes-deborig" );
-            die "could not open .git/info/attributes for writing";
+        unless ( open( $attributes_fh, '>', $info_attributes ) ) {
+            rename $deborig_attributes, $info_attributes
+              if ( -e $deborig_attributes );
+            die "could not open $info_attributes for writing";
         }
         print $attributes_fh "* -export-subst\n";
         print $attributes_fh "* -export-ignore\n";
@@ -232,10 +237,10 @@ sub archive_ref_or_just_print {
               nocheck => 1);
 
         # Restore situation before we messed around with git attributes
-        if ( -e ".git/info/attributes-deborig" ) {
-            rename ".git/info/attributes-deborig", ".git/info/attributes";
+        if ( -e $deborig_attributes ) {
+            rename $deborig_attributes, $info_attributes;
         } else {
-            unlink ".git/info/attributes";
+            unlink $info_attributes;
         }
     }
 }
